[project]
name = "nonebot-plugin-osumania-toolkit"
version = "1.1.0"
description = "a nonebot plugin with some useful osu!mania utilities"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Leo_Black", email = "Leo_BlackMT@qq.com"}
]

dependencies = [
    "nonebot2>=2.3.0",
    "nonebot-adapter-onebot>=2.0.0",
    "nonebot-plugin-localstore>=0.3.0",
    "nonebot-plugin-htmlkit>=0.2.0",
    "aiohttp>=3.8.0",
    "Pillow>=10.0.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "statsmodels>=0.14.0",
    "matplotlib>=3.5.0",
    "pydantic>=2.0.0",
    "pandas>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/LeoBlackMT/nonebot_plugin_osumania_toolkit"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.entry-points."nonebot.plugin"]
osumania_toolkit = "nonebot_plugin_osumania_toolkit"